--- a/coqui_XTTS_v2_colab.ipynb
+++ b/coqui_XTTS_v2_colab.ipynb
@@ -18,11 +18,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "WbyzBgvKc3JX",
-        "outputId": "7122a88b-5c74-4782-8a64-232a9dfb2385",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WbyzBgvKc3JX",
+        "outputId": "7122a88b-5c74-4782-8a64-232a9dfb2385"
       },
       "execution_count": 4,
       "outputs": [
@@ -104,11 +104,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "g_REEzMJc_MV",
-        "outputId": "ba49d67b-4458-463c-9f1b-804f9709e563",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g_REEzMJc_MV",
+        "outputId": "ba49d67b-4458-463c-9f1b-804f9709e563"
       },
       "execution_count": 5,
       "outputs": [
@@ -807,11 +807,11 @@
         "print(f'Model loaded on {device}!')"
       ],
       "metadata": {
-        "id": "cuQGaSpKdORk",
-        "outputId": "003f1bf9-207f-48cd-f81c-9b6e08d31621",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cuQGaSpKdORk",
+        "outputId": "003f1bf9-207f-48cd-f81c-9b6e08d31621"
       },
       "execution_count": 6,
       "outputs": [
@@ -830,11 +830,12 @@
         "!/content/py311env/bin/python /content/load_model.py\n"
       ],
       "metadata": {
-        "id": "Fzgg7A8if2BY",
-        "outputId": "4032acf2-93b4-438c-e0a4-e7050b5e2041",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true,
+        "id": "Fzgg7A8if2BY",
+        "outputId": "4032acf2-93b4-438c-e0a4-e7050b5e2041"
       },
       "execution_count": 7,
       "outputs": [
@@ -861,6 +862,83 @@
             "  - If you are the owner of the model architecture code, please modify your model class such that it inherits from `GenerationMixin` (after `PreTrainedModel`, otherwise you'll get an exception).\n",
             "  - If you are not the owner of the model architecture class, please contact the model code owner to update it.\n",
             "Model loaded on cuda!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile /content/generate_voice.py\n",
+        "import os\n",
+        "os.environ['MPLBACKEND'] = 'Agg'\n",
+        "from TTS.api import TTS\n",
+        "import torch\n",
+        "\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "tts = TTS('tts_models/multilingual/multi-dataset/xtts_v2').to(device)\n",
+        "\n",
+        "# Insert your text here to replace the example \"...\"\n",
+        "text = \"He became as good a friend, as good a master, and as good a man as the good old city knew.\"\n",
+        "\n",
+        "# Generate speech\n",
+        "tts.tts_to_file(\n",
+        "    text=text,\n",
+        "    speaker_wav=\"/content/mc1.mp3\",  # <-- change this to match your audio file\n",
+        "    language=\"en\",\n",
+        "    file_path=\"/content/cloned_voice.wav\"\n",
+        ")\n",
+        "\n",
+        "print(\"Voice generated: /content/cloned_voice.wav\")"
+      ],
+      "metadata": {
+        "id": "96PT2kx7g3-7",
+        "outputId": "57ee6e3b-d716-4e30-86e6-64d56cf04437",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing /content/generate_voice.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!/content/py311env/bin/python /content/generate_voice.py"
+      ],
+      "metadata": {
+        "id": "m3Y06X-HhMj1",
+        "outputId": "3b870cd3-d7fc-491b-e4c9-46448f4f3303",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " > tts_models/multilingual/multi-dataset/xtts_v2 is already downloaded.\n",
+            " > Using model: xtts\n",
+            "GPT2InferenceModel has generative capabilities, as `prepare_inputs_for_generation` is explicitly overwritten. However, it doesn't directly inherit from `GenerationMixin`. From 👉v4.50👈 onwards, `PreTrainedModel` will NOT inherit from `GenerationMixin`, and this model will lose the ability to call `generate` and other related functions.\n",
+            "  - If you're using `trust_remote_code=True`, you can get rid of this warning by loading the model with an auto class. See https://huggingface.co/docs/transformers/en/model_doc/auto#auto-classes\n",
+            "  - If you are the owner of the model architecture code, please modify your model class such that it inherits from `GenerationMixin` (after `PreTrainedModel`, otherwise you'll get an exception).\n",
+            "  - If you are not the owner of the model architecture class, please contact the model code owner to update it.\n",
+            " > Text splitted to sentences.\n",
+            "['He became as good a friend, as good a master, and as good a man as the good old city knew.']\n",
+            "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+            " > Processing time: 5.848708629608154\n",
+            " > Real-time factor: 0.7725727576132213\n",
+            "Voice generated: /content/cloned_voice.wav\n"
           ]
         }
       ]
